Adjusted the thermometers to work better with the temperature range.
Added limits to the burner to prevent it from over heating or over cooling items.
# 0.00.04 (64564) May 31, 2012
5/31/12 Snapshot for testing and review.
Changed the clock control panel to have "Fast Forward" instead of "Slow Motion".
Made water get more transparent when energy chunks are visible.
Replaced lead block with iron block, since iron has a greater specific heat value.
Removed label from thermometer tool box.
Made labels get transparent when blocks and beakers become transparent.
# 0.00.03 (64309) May 23, 2012
5/23/12 Deploying to dev for review by design team.
Added thermometer tool box and made thermometer move to original location when dropped within the box.
Removed the thermometer shelf.
# 0.00.02 (63687) Apr 23, 2012
4/23/12 Publishing to dev for review of some aspects of the UI on the first tab.
Added movable visual representation of the thermometers.
Added texture to the brick.
Added z-order management so that blocks look correct when stacked on each other and placed beside one another.
Adjusted block and beaker sizes as well as displacement algorithm so that both blocks fit in the beaker and the water is displaced to cover both blocks and almost fill the beaker when both blocks are contained.
Adjusted block size so that both blocks will fit in the beaker.
Added the ability to remove blocks from the beaker.
Added displacement of the water when blocks added to beaker.
Made blocks snap to the center of the thing that they are stacked on when dropped.
Added beaker.
Added blocks.
Added burners.
Added shelves.
Added drawing for 2nd tab.
# 0.00.01 (62656) Mar 20, 2012
3/20/12 Deploying very first version to dev in order to test that project is correctly set up.
Added a drawing of the envisioned design to the main canvas as a sort of fast prototype.